Project import generated by Copybara.
GitOrigin-RevId: 66a231bc4825bdc912b38dd9f8ceb6ff887b9c5c